--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^1.7.2",
         "crypto-js": "^4.2.0",
+        "got": "^14.6.6",
         "long": "^5.2.3",
         "protobufjs": "^7.3.0",
         "qs": "^6.12.1",
